[tool.poetry]
name = "storm-client"
version = "0.1.0"
description = "A client library in Python for the SpatioTemporal Open Research Manager Web Service."
authors = ["Felipe Menino Carlos <efelipecarlos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
cachetools = "^4.2.4"
pydash = "^5.1.0"
httpx = "^0.19.0"
aiofiles = "^0.7.0"
typeguard = "^2.13.0"
simplejson = ">=3.17.6,<3.18"
storm-hasher = { git = "https://github.com/storm-platform/storm-hasher.git", rev = "5fd1cfd"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
